--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,99 @@
+# See http://help.github.com/ignore-files/ for more about ignoring files.
 
+# Compiled output
+/tmp
+/out-tsc
+/bazel-out
+
+# Node
+/node_modules
+npm-debug.log
+yarn-error.log
+
+# Python
+.env
+venv/
+
+# Java
+*.class
+*.war
+*.ear
+*.jar
+
+# IDEs and editors
+.idea/
+.project
+.classpath
+.c9/
+*.launch
+.settings/
+*.sublime-workspace
+
+# Visual Studio Code
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+.history/*
+*.code-workspace
+
+# Miscellaneous
+/.angular/cache
+.sass-cache/
+/connect.lock
+/coverage
+/libpeerconnection.log
+testem.log
+/typings
+
+# System files
+.DS_Store?
+*.DS_Store
+Thumbs.db
+Icon?
 config/master.key
+
+# Ruby files
+/log/*
+!/log/.keep
+
+/tmp
+
+/db/*.sqlite3
+/db/*.sqlite3-journal
+
+/config/initializers/secret_token.rb
+/config/secrets.yml
+/config/master.key
+
+/public/uploads
+/public/assets
+
+/.bundle
+
+/storage/*
+!/storage/.keep
+
+/node_modules
+
+.yarn-cache
+
+/coverage
+
+/tmp/cache
+/public/system
+
+*.bak
+/vendor/bundle
+
+.vscode/
+.idea/
+*.swp
+*~
+*.sublime-*
+
+.env
+.env.development
+.env.test
+.env.production
